force-app/main/default/objects/Peak_Image_Gallery_Entry__c.object
<CustomObject>
    <label>Peak Image Gallery Entry</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Peak Image Gallery Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gallery Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>