force-app/main/default/objects/Peak_Image_Gallery_Entry__c/fields/Image_Description__c.field-meta.xml
<CustomField>
    <fullName>Image_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Image Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>