force-app/main/default/objects/Peak_Image_Gallery_Entry__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Image URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>