force-app/main/default/objects/Peak_Image_Gallery_Entry__c/fields/Peak_Image_Gallery__c.field-meta.xml
<CustomField>
    <fullName>Peak_Image_Gallery__c</fullName>
    <label>Peak Image Gallery</label>
    <referenceTo>Peak_Image_Gallery__c</referenceTo>
    <relationshipLabel>Gallery Entries</relationshipLabel>
    <relationshipName>Gallery_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>